Added different stages to dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,19 +1,33 @@
-FROM node:14
+# ------------------------------
+# Stage 1 : Build Stage
+# ------------------------------
+FROM node:14 AS base
 
 # Set the working directory
 WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json
-COPY package*.json ./
+COPY . .
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application files
-COPY . .
-
 # Expose the application port
 EXPOSE 3000
 
+# ------------------------------
+# Stage 2 : Production Stage
+# ------------------------------
+FROM base AS prod
+
 # Command to run the application
 CMD ["node", "src/app.js"]
+
+# ------------------------------
+# Stage 3 : Development Stage
+# ------------------------------
+FROM base as dev
+
+RUN npm install -g nodemon
+
+CMD ["nodemon", "-L", "src/app.js"]
