--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     environment:
       - NODE_ENV=production
     ports:
-      - "3001:3000"
+      - "3001:3000" # Pourquoi c'est different de l'autre en haut ?
     networks:
       - my-network
 
